<resources>
    <string name="app_name">BookApp</string>
    <string name="favorites">Favorites</string>
    <string name="dashboard">Dashboard</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="bookApp">BookApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="price">Price</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="todo">TODO</string>
    <string name="check_internet">Check Internet</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="about_the_book">About the Book:</string>
    <string name="sort">Sort</string>

</resources>