<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="#fff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/design_default_color_primary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="#ffffff"
                android:layout_margin="6dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:id="@+id/rowLLParent"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="#ffffff"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <ImageView
                        android:id="@+id/imgBookImage"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1.5"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/todo"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.3">

                        <TextView
                            android:id="@+id/txtBookName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/name_of_the_book"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtBookAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtBookName"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:text="@string/name_of_the_author"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txtBookPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtBookAuthor"
                            android:layout_alignParentBottom="true"
                            android:padding="8dp"
                            android:text="@string/price"
                            android:textColor="#357a38"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <!--Many times we see that texts have an image along with them to
                    their right or left. This is added with the help of the
                    drawableLeft (or drawableRight and so on) attribute-->

                    <TextView
                        android:id="@+id/txtBookRating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:drawableStart="@drawable/ic_action_name"
                        android:drawablePadding="4dp"
                        android:padding="4dp"
                        android:text="@string/rating"
                        android:textColor="#ffca28"
                        android:textSize="15sp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/cardView">

                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_the_book"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_margin="6dp"
                    android:text="@string/hello_blank_fragment"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/addToFavButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:text="@string/add_to_favorites"
        android:textSize="17sp"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>